Assign bot to an order | implemented
